--- a/.editorconfig
+++ b/.editorconfig
@@ -1,47 +1,47 @@
-# Удалите строку ниже, если вы хотите наследовать параметры .editorconfig из каталогов, расположенных выше в иерархии
+# РЈРґР°Р»РёС‚Рµ СЃС‚СЂРѕРєСѓ РЅРёР¶Рµ, РµСЃР»Рё РІС‹ С…РѕС‚РёС‚Рµ РЅР°СЃР»РµРґРѕРІР°С‚СЊ РїР°СЂР°РјРµС‚СЂС‹ .editorconfig РёР· РєР°С‚Р°Р»РѕРіРѕРІ, СЂР°СЃРїРѕР»РѕР¶РµРЅРЅС‹С… РІС‹С€Рµ РІ РёРµСЂР°СЂС…РёРё
 root = true
 
-# Файлы C#
+# Р¤Р°Р№Р»С‹ C#
 [*.cs]
 
-#### Основные параметры EditorConfig ####
+#### РћСЃРЅРѕРІРЅС‹Рµ РїР°СЂР°РјРµС‚СЂС‹ EditorConfig ####
 
-# Отступы и интервалы
+# РћС‚СЃС‚СѓРїС‹ Рё РёРЅС‚РµСЂРІР°Р»С‹
 indent_size = 4
 indent_style = space
 tab_width = 4
 
-# Предпочтения для новых строк
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РґР»СЏ РЅРѕРІС‹С… СЃС‚СЂРѕРє
 end_of_line = crlf
 insert_final_newline = false
 
-#### Рекомендации по написанию кода .NET ####
+#### Р РµРєРѕРјРµРЅРґР°С†РёРё РїРѕ РЅР°РїРёСЃР°РЅРёСЋ РєРѕРґР° .NET ####
 
-# Упорядочение Using
+# РЈРїРѕСЂСЏРґРѕС‡РµРЅРёРµ Using
 dotnet_separate_import_directive_groups = false
 dotnet_sort_system_directives_first = false
 file_header_template = unset
 
-# Предпочтения для this. и Me.
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РґР»СЏ this. Рё Me.
 dotnet_style_qualification_for_event = false
 dotnet_style_qualification_for_field = false
 dotnet_style_qualification_for_method = false
 dotnet_style_qualification_for_property = false
 
-# Параметры использования ключевых слов языка и типов BCL
+# РџР°СЂР°РјРµС‚СЂС‹ РёСЃРїРѕР»СЊР·РѕРІР°РЅРёСЏ РєР»СЋС‡РµРІС‹С… СЃР»РѕРІ СЏР·С‹РєР° Рё С‚РёРїРѕРІ BCL
 dotnet_style_predefined_type_for_locals_parameters_members = true
 dotnet_style_predefined_type_for_member_access = true
 
-# Предпочтения для скобок
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РґР»СЏ СЃРєРѕР±РѕРє
 dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:warning
 dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:warning
 dotnet_style_parentheses_in_other_operators = never_if_unnecessary
 dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:warning
 
-# Предпочтения модификатора
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РјРѕРґРёС„РёРєР°С‚РѕСЂР°
 dotnet_style_require_accessibility_modifiers = for_non_interface_members
 
-# Выражения уровень предпочтения
+# Р’С‹СЂР°Р¶РµРЅРёСЏ СѓСЂРѕРІРµРЅСЊ РїСЂРµРґРїРѕС‡С‚РµРЅРёСЏ
 dotnet_style_coalesce_expression = true:warning
 dotnet_style_collection_initializer = true:warning
 dotnet_style_explicit_tuple_names = true:warning
@@ -60,27 +60,27 @@ dotnet_style_prefer_is_null_check_over_reference_equality_method = true
 dotnet_style_prefer_simplified_boolean_expressions = true
 dotnet_style_prefer_simplified_interpolation = true
 
-# Предпочтения для полей
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РґР»СЏ РїРѕР»РµР№
 dotnet_style_readonly_field = true:warning
 
-# Настройки параметров
+# РќР°СЃС‚СЂРѕР№РєРё РїР°СЂР°РјРµС‚СЂРѕРІ
 dotnet_code_quality_unused_parameters = all:silent
 
-# Параметры подавления
+# РџР°СЂР°РјРµС‚СЂС‹ РїРѕРґР°РІР»РµРЅРёСЏ
 dotnet_remove_unnecessary_suppression_exclusions = none
 
-# Предпочтения для новых строк
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РґР»СЏ РЅРѕРІС‹С… СЃС‚СЂРѕРє
 dotnet_style_allow_multiple_blank_lines_experimental = false:warning
 dotnet_style_allow_statement_immediately_after_block_experimental = false:suggestion
 
-#### Рекомендации по написанию кода C# ####
+#### Р РµРєРѕРјРµРЅРґР°С†РёРё РїРѕ РЅР°РїРёСЃР°РЅРёСЋ РєРѕРґР° C# ####
 
-# Предпочтения var
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ var
 csharp_style_var_elsewhere = false:warning
 csharp_style_var_for_built_in_types = false:silent
 csharp_style_var_when_type_is_apparent = false:warning
 
-# Члены, заданные выражениями
+# Р§Р»РµРЅС‹, Р·Р°РґР°РЅРЅС‹Рµ РІС‹СЂР°Р¶РµРЅРёСЏРјРё
 csharp_style_expression_bodied_accessors = true:warning
 csharp_style_expression_bodied_constructors = true:suggestion
 csharp_style_expression_bodied_indexers = true:warning
@@ -90,7 +90,7 @@ csharp_style_expression_bodied_methods = true:warning
 csharp_style_expression_bodied_operators = true:warning
 csharp_style_expression_bodied_properties = true:warning
 
-# Настройки соответствия шаблонов
+# РќР°СЃС‚СЂРѕР№РєРё СЃРѕРѕС‚РІРµС‚СЃС‚РІРёСЏ С€Р°Р±Р»РѕРЅРѕРІ
 csharp_style_pattern_matching_over_as_with_null_check = true:warning
 csharp_style_pattern_matching_over_is_with_cast_check = true:warning
 csharp_style_prefer_extended_property_pattern = true:suggestion
@@ -98,23 +98,23 @@ csharp_style_prefer_not_pattern = true:warning
 csharp_style_prefer_pattern_matching = true:silent
 csharp_style_prefer_switch_expression = true:silent
 
-# Настройки проверки на null
+# РќР°СЃС‚СЂРѕР№РєРё РїСЂРѕРІРµСЂРєРё РЅР° null
 csharp_style_conditional_delegate_call = true:warning
 
-# Предпочтения модификатора
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РјРѕРґРёС„РёРєР°С‚РѕСЂР°
 csharp_prefer_static_local_function = true:silent
 csharp_preferred_modifier_order = public,private,protected,internal,file,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,required,volatile,async
 csharp_style_prefer_readonly_struct = true:warning
 csharp_style_prefer_readonly_struct_member = true:suggestion
 
-# Предпочтения для блоков кода
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РґР»СЏ Р±Р»РѕРєРѕРІ РєРѕРґР°
 csharp_prefer_braces = when_multiline:warning
 csharp_prefer_simple_using_statement = true:silent
 csharp_style_namespace_declarations = file_scoped:suggestion
 csharp_style_prefer_method_group_conversion = false:warning
 csharp_style_prefer_top_level_statements = false:warning
 
-# Выражения уровень предпочтения
+# Р’С‹СЂР°Р¶РµРЅРёСЏ СѓСЂРѕРІРµРЅСЊ РїСЂРµРґРїРѕС‡С‚РµРЅРёСЏ
 csharp_prefer_simple_default_expression = true:suggestion
 csharp_style_deconstructed_variable_declaration = true:warning
 csharp_style_implicit_object_creation_when_type_is_apparent = true:warning
@@ -129,19 +129,19 @@ csharp_style_throw_expression = true:warning
 csharp_style_unused_value_assignment_preference = discard_variable:suggestion
 csharp_style_unused_value_expression_statement_preference = discard_variable:silent
 
-# предпочтения для директивы using
+# РїСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РґР»СЏ РґРёСЂРµРєС‚РёРІС‹ using
 csharp_using_directive_placement = outside_namespace:error
 
-# Предпочтения для новых строк
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РґР»СЏ РЅРѕРІС‹С… СЃС‚СЂРѕРє
 csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = true:silent
 csharp_style_allow_blank_line_after_token_in_arrow_expression_clause_experimental = false:silent
 csharp_style_allow_blank_line_after_token_in_conditional_expression_experimental = false:warning
 csharp_style_allow_blank_lines_between_consecutive_braces_experimental = false:warning
 csharp_style_allow_embedded_statements_on_same_line_experimental = true:suggestion
 
-#### Правила форматирования C# ####
+#### РџСЂР°РІРёР»Р° С„РѕСЂРјР°С‚РёСЂРѕРІР°РЅРёСЏ C# ####
 
-# Предпочтения для новых строк
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РґР»СЏ РЅРѕРІС‹С… СЃС‚СЂРѕРє
 csharp_new_line_before_catch = true
 csharp_new_line_before_else = true
 csharp_new_line_before_finally = true
@@ -150,7 +150,7 @@ csharp_new_line_before_members_in_object_initializers = true
 csharp_new_line_before_open_brace = all
 csharp_new_line_between_query_expression_clauses = true
 
-# Предпочтения для отступов
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РґР»СЏ РѕС‚СЃС‚СѓРїРѕРІ
 csharp_indent_block_contents = true
 csharp_indent_braces = false
 csharp_indent_case_contents = true
@@ -158,7 +158,7 @@ csharp_indent_case_contents_when_block = true
 csharp_indent_labels = one_less_than_current
 csharp_indent_switch_labels = true
 
-# Предпочтения для интервалов
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РґР»СЏ РёРЅС‚РµСЂРІР°Р»РѕРІ
 csharp_space_after_cast = false
 csharp_space_after_colon_in_inheritance_clause = true
 csharp_space_after_comma = true
@@ -182,13 +182,13 @@ csharp_space_between_method_declaration_parameter_list_parentheses = false
 csharp_space_between_parentheses = false
 csharp_space_between_square_brackets = false
 
-# Предпочтения переноса
+# РџСЂРµРґРїРѕС‡С‚РµРЅРёСЏ РїРµСЂРµРЅРѕСЃР°
 csharp_preserve_single_line_blocks = true
 csharp_preserve_single_line_statements = true
 
-#### Стили именования ####
+#### РЎС‚РёР»Рё РёРјРµРЅРѕРІР°РЅРёСЏ ####
 
-# Правила именования
+# РџСЂР°РІРёР»Р° РёРјРµРЅРѕРІР°РЅРёСЏ
 
 dotnet_naming_rule.interface_should_be_begins_with_i.severity = suggestion
 dotnet_naming_rule.interface_should_be_begins_with_i.symbols = interface
@@ -202,7 +202,7 @@ dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = suggestion
 dotnet_naming_rule.non_field_members_should_be_pascal_case.symbols = non_field_members
 dotnet_naming_rule.non_field_members_should_be_pascal_case.style = pascal_case
 
-# Спецификации символов
+# РЎРїРµС†РёС„РёРєР°С†РёРё СЃРёРјРІРѕР»РѕРІ
 
 dotnet_naming_symbols.interface.applicable_kinds = interface
 dotnet_naming_symbols.interface.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
@@ -216,7 +216,7 @@ dotnet_naming_symbols.non_field_members.applicable_kinds = property, event, meth
 dotnet_naming_symbols.non_field_members.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
 dotnet_naming_symbols.non_field_members.required_modifiers = 
 
-# Стили именования
+# РЎС‚РёР»Рё РёРјРµРЅРѕРІР°РЅРёСЏ
 
 dotnet_naming_style.pascal_case.required_prefix = 
 dotnet_naming_style.pascal_case.required_suffix = 
