test: тестировал как это работает, ничего не понял))

--- a/src/Book/Book.API/Book.API.csproj
+++ b/src/Book/Book.API/Book.API.csproj
@@ -16,9 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
-    <Folder Include="Controllers\" />
+    <Folder Include="Application\Commands\" />
     <Folder Include="Exceptions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Book.Domain\Book.Domain.csproj" />
   </ItemGroup>
 
 </Project>
