fix: исправлено поведение при долбавлении в коллекции

--- a/src/Book/Book.Domain/Book.Domain.csproj
+++ b/src/Book/Book.Domain/Book.Domain.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Shared.Core\Shared.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Resources\Localizations\Localization.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
