feature: добавлена первичная поддержка docker-compose

--- a/src/Book/Book.API/Book.API.csproj
+++ b/src/Book/Book.API/Book.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>db8df67c-239b-46a6-8217-6023eb26182d</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
