--- a/src/User/User.API/User.API.csproj
+++ b/src/User/User.API/User.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>48a4fb93-f132-443d-a7dc-95e3d1d5f866</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
