--- a/launchSettings.json
+++ b/launchSettings.json
@@ -6,7 +6,10 @@
       "serviceActions": {
         "book.api": "StartDebugging",
         "magazine.api": "StartDebugging",
-        "user.api": "StartDebugging"
+        "user.api": "StartDebugging",
+        "kafka": "StartWithoutDebugging",
+        "client.shell": "StartDebugging",
+        "kafka-ui": "StartWithoutDebugging"
       }
     }
   }
