feature: настроена инфраструктура для написание контроллеров

--- a/src/Book/Book.API/Book.API.csproj
+++ b/src/Book/Book.API/Book.API.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Book.Domain\Book.Domain.csproj" />
+    <ProjectReference Include="..\Book.Infrastructure\Book.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
