--- a/src/Book/Book.API/appsettings.json
+++ b/src/Book/Book.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BookContext": "Host=localhost; Port=5432; Database=database; Username=root; Password=password;"
+  }
 }
