--- a/src/Book/Book.API/appsettings.json
+++ b/src/Book/Book.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BookContext": "Host=localhost; Port=5432; Database=database; Username=root; Password=password;"
+    "BookContext": "Host=book.db; Port=5432; Database=Book; Username=postgres; Password=bookpassword;"
   }
 }
