--- a/src/Magazine/Magazine.API/Dockerfile
+++ b/src/Magazine/Magazine.API/Dockerfile
@@ -9,7 +9,7 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Magazine.API/Magazine.API.csproj", "Magazine.API/"]
+COPY ["src/Magazine/Magazine.API/Magazine.API.csproj", "Magazine.API/"]
 RUN dotnet restore "./Magazine.API/Magazine.API.csproj"
 COPY . .
 WORKDIR "/src/Magazine.API"
