--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Pull Request Telegram
         uses: F2had/pr-telegram-action@v1.0.0
         with: 
-          bot_token: '$7463441241:AAGN2_tjL8aJctKQ8p1CfjKW61GkA48u7Kg' # Your bot token from github secrets
-          chat_id: '$-1002125306971' # Your chat id from github secrets
+          bot_token: '${{ secrets.PRBOTTOKEN }}' # Your bot token from github secrets
+          chat_id: '${{ secrets.PRCHATID }}' # Your chat id from github secrets
