--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Telegram Pull Request Notifier
 
 on:
   pull_request:
-    types: [opened, review_requested, closed, edited, ]
+    types: [opened, review_requested, closed, edited]
 
 jobs:
   notification:
