--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       # Send a telegram message on pr open or review request
       - name: Pull Request Telegram
-        uses: appleboy/telegram-action@master
+        uses: F2had/pr-telegram-action@v1.0.0
         with: 
           bot_token: '${{ secrets.PRBOTTOKEN }}' # Your bot token from github secrets
           chat_id: '${{ secrets.PRCHATID }}' # Your chat id from github secrets
