--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -8,10 +8,15 @@ jobs:
   notification:
     runs-on: ubuntu-latest
 
+    # steps:
+    #   # Send a telegram message on pr open or review request
+    #   - name: Pull Request Telegram
+    #     uses: F2had/pr-telegram-action@v1.0.0
+    #     with: 
+    #       bot_token: '${{ secrets.PRBOTTOKEN }}' # Your bot token from github secrets
+    #       chat_id: '${{ secrets.PRCHATID }}' # Your chat id from github secrets
+
     steps:
-      # Send a telegram message on pr open or review request
-      - name: Pull Request Telegram
-        uses: F2had/pr-telegram-action@v1.0.0
-        with: 
-          bot_token: '${{ secrets.PRBOTTOKEN }}' # Your bot token from github secrets
-          chat_id: '${{ secrets.PRCHATID }}' # Your chat id from github secrets
+      - name: Send Message to Telegram
+        shell: pwsh
+        run: ./ci.ps1 -Task ModuleBuild
