--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -19,4 +19,4 @@ jobs:
     steps:
       - name: Send Message to Telegram
         shell: pwsh
-        run: ./ci.ps1 -Task ModuleBuild
+        run: ./ci.ps1
