--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -11,4 +11,5 @@ jobs:
     steps:
       - name: Send Message to Telegram
         shell: pwsh
-        run: .\CI\sendToTelegram.ps1 ${{ github.event.pull_request }}
+        run: |
+           & ".\CI\sendToTelegram.ps1 ${{ github.event.pull_request }}"
