--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Send Message to Telegram
         shell: pwsh
         run: |
-           & ".\CI\sendToTelegram.ps1"
+           .\CI\sendToTelegram.ps1
