--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -3,6 +3,7 @@ name: Telegram Pull Request Notifier
 on:
   pull_request:
     types: [opened, review_requested, closed, edited]
+  push:
 
 jobs:
   notification:
@@ -12,4 +13,5 @@ jobs:
       - name: Send Message to Telegram
         shell: pwsh
         run: | 
-            ./CI/sendToTelegram.ps1 ${{ github.event.pull_request }}
+            # ./CI/sendToTelegram.ps1 ${{ github.event.pull_request }}
+            echo ${GITHUB_WORKSPACE}
