--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -11,7 +11,6 @@ jobs:
 
     steps:
       - name: Send Message to Telegram
-        shell: pwsh
+        shell: powershell
         run: | 
-            ${{github.workspace}}/CI/sendToTelegram.ps1 ${{ github.event.pull_request }}
-            echo ${{github.workspace}}
+            ./CI/sendToTelegram.ps1 ${{ github.event.pull_request }}
