--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -14,4 +14,4 @@ jobs:
         shell: pwsh
         run: | 
             echo ${{github.workdir}}
-            ./CI/sendToTelegram.ps1 ${{ github.event.pull_request }}
+            # ./CI/sendToTelegram.ps1 ${{ github.event.pull_request }}
