--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Send Message to Telegram
         shell: pwsh
         run:  
-            Get-ChildItem -Path ${{github.workspace}}
-            # ./CI/sendToTelegram.ps1 ${{ github.event.pull_request }}
+            # Get-ChildItem -Path ${{github.workspace}}
+            '& $env:GITHUB_ACTION_PATH/CI/sendToTelegram.ps1 ${{ github.event.pull_request }}'
