--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -12,6 +12,6 @@ jobs:
     steps:
       - name: Send Message to Telegram
         shell: pwsh
-        run:  
+        run: |
             # Get-ChildItem -Path ${{github.workspace}}
-            '& $env:GITHUB_ACTION_PATH/CI/sendToTelegram.ps1 ${{ github.event.pull_request }}'
+            & $env:GITHUB_ACTION_PATH/CI/sendToTelegram.ps1 ${{ github.event.pull_request }}
