--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -15,4 +15,5 @@ jobs:
         run: 
             # Get-ChildItem -Path ${{github.workspace}}
             ${{ github.action_path }}
+            ${{github.workspace}}
             #/CI/sendToTelegram.ps1
