--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Send Message to Telegram
         shell: pwsh
         run: |
-            .\sendToTelegram.ps1
-            # Get-ChildItem -Path ${{github.workspace}}
-            # ${{ github.action_path }}
-            # &
-            # ${{github.workspace}}
-            #/CI/sendToTelegram.ps1
+            # Переменные для отправки в телегу
+            $botToken = "7463441241:AAGN2_tjL8aJctKQ8p1CfjKW61GkA48u7Kg"
+            $chatId = "-1002125306971"
+            $messageText = "Hello World from PowerShell"
+            $url="https://api.telegram.org/bot$botToken/sendMessage?chat_id=$chatID&text=$messageText"
+            Invoke-RestMethod -Uri $url -Method Post
