--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -14,8 +14,12 @@ jobs:
         shell: pwsh
         run: |
             # Переменные для отправки в телегу
-            $botToken = "7463441241:AAGN2_tjL8aJctKQ8p1CfjKW61GkA48u7Kg"
-            $chatId = "-1002125306971"
-            $messageText = "Hello World from PowerShell"
+            $githubAction = ${{GITHUB_ACTION}}
+            $githubApiUrl = ${{GITHUB_API_URL}}
+            $githubEventName = ${{GITHUB_EVENT_NAME}}
+
+            $botToken = ${{ secrets.PRBOTTOKEN }}
+            $chatId = ${{ secrets.PRCHATID }}
+            $messageText = "PullRequest No$githubAction from $githubApiUrl. Event - $githubEventName"
             $url="https://api.telegram.org/bot$botToken/sendMessage?chat_id=$chatID&text=$messageText"
             Invoke-RestMethod -Uri $url -Method Post
