--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -14,9 +14,9 @@ jobs:
         shell: pwsh
         run:
             # Переменные для отправки в телегу
-            $githubAction = ${{github.action}}
-            $githubApiUrl = ${{github.api_url}}
-            $githubEventName = ${{github.event_name}}
+            $githubAction = "${{github.action}}"
+            $githubApiUrl = "${{github.api_url}}"
+            $githubEventName = "${{github.event_name}}"
             $botToken = ${{ secrets.PRBOTTOKEN }}
             $chatId = ${{ secrets.PRCHATID }}
             $messageText = "PullRequest No$githubAction from $githubApiUrl. Event - $githubEventName"            
