--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -14,11 +14,11 @@ jobs:
         shell: pwsh
         run:
             # Переменные для отправки в телегу
-            $githubAction = "${{github.action}}"
+            # $githubAction = "${{github.action}}"
             $githubApiUrl = "${{github.api_url}}"
             $githubEventName = "${{github.event_name}}"
             $botToken = ${{ secrets.PRBOTTOKEN }}
             $chatId = ${{ secrets.PRCHATID }}
-            $messageText = "PullRequest No$githubAction from $githubApiUrl. Event - $githubEventName"            
+            $messageText = "PullRequest from $githubApiUrl. Event - $githubEventName"            
             $url="https://api.telegram.org/bot$botToken/sendMessage?chat_id=$chatID&text=$messageText"
             Invoke-RestMethod -Uri $url -Method Post
