--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -19,6 +19,10 @@ jobs:
             $githubEventName = "${{github.event_name}}"
             $botToken = "${{ secrets.PRBOTTOKEN }}"
             $chatId = "${{ secrets.PRCHATID }}"
-            $messageText = "PullRequest from $githubApiUrl. Event - $githubEventName"            
+            $messageText = @"PullRequest . Action ${{ github. }} 
+            User - ${{ github.actor }}
+            From branch - ${{ github.ref_name }}
+            To branch - ${{github.ref}}
+            "@
             $url="https://api.telegram.org/bot$botToken/sendMessage?chat_id=$chatID&text=$messageText"
             Invoke-RestMethod -Uri $url -Method Post
