--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -19,7 +19,8 @@ jobs:
             $githubEventName = "${{github.event_name}}"
             $botToken = "${{ secrets.PRBOTTOKEN }}"
             $chatId = "${{ secrets.PRCHATID }}"
-            $messageText = @"PullRequest . Action ${{ github.event_name }}.
+            $messageText = @"
+            PullRequest . Action ${{ github.event_name }}.
             User - ${{ github.actor }}
             From branch - ${{ github.ref_name }}
             To branch - ${{github.ref}}
