--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -20,10 +20,10 @@ jobs:
             $botToken = "${{ secrets.PRBOTTOKEN }}"
             $chatId = "${{ secrets.PRCHATID }}"
             $messageText = @"
-            PullRequest ${{ github.event.number }}. Action ${{ github.event_name }}.
+            PullRequest ${{ github.event.pull_request.title }}. Action ${{ github.event_name }}.
             User - ${{ github.actor }}
             From branch - ${{ github.ref_name }}
-            Url - ${{ github.server_url }}/pull/${{ github.event.number }}
+            Url - ${{ github.server_url }}/${{ github.repository }}/pull${{ github.event.number }}
             "@
             $url="https://api.telegram.org/bot$botToken/sendMessage?chat_id=$chatID&text=$messageText"
             Invoke-RestMethod -Uri $url -Method Post
