--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -14,17 +14,14 @@ jobs:
         shell: pwsh
         run: |
             # Переменные для отправки в телегу
-            ${{ github.event_number }}
             $githubAction = "${{github.action}}"
             $githubApiUrl = "${{github.api_url}}"
             $githubEventName = "${{github.event_name}}"
             $botToken = "${{ secrets.PRBOTTOKEN }}"
             $chatId = "${{ secrets.PRCHATID }}"
             $messageText = @"
-            PullRequest ${{ github.event_number }} ${{ github.event_name }}.
-            User - ${{ github.actor }}
-            From branch - ${{ github.ref_name }}
-            Url - ${{ github.server_url }}/${{ github.repository }}/pull/${{ github.event.number }}
+            PullRequest ${{ github.event.pull_request.number }} - ${{ github.event_name }}.
+            Url - ${{ github.server_url }}/${{ github.repository }}/pull/${{ github.event.pull_request.number }}
             "@
             $url="https://api.telegram.org/bot$botToken/sendMessage?chat_id=$chatID&text=$messageText"
             Invoke-RestMethod -Uri $url -Method Post
