feature: добавлена логика работы producer и consumer для Kafka

--- a/src/Book/Book.API/appsettings.json
+++ b/src/Book/Book.API/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BookContext": "Host=book.db; Port=5432; Database=Book; Username=postgres; Password=bookpassword;"
+  },
+  "KafkaConsumer": {
+    "BootstrapServers": "kafka:25092",
+    "ClientId": "ConsumerBookApi",
+    "GroupId": "BookAPIGroup",
+    "AutoOffsetReset": "Earliest",
+    "EnableAutoCommit": "true"
+  },
+  "KafkaProducer": {
+    "BootstrapServers": "kafka:25092"
   }
 }
